clusters/home/apps/opencode/opencode/configs/opencode-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opencode-ingressroute
  namespace: opencode
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://opencode.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: OpenCode
    gethomepage.dev/group: Programming
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: opencode # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: OpenCode
    #gethomepage.dev/widget.type: "opencode"
    #gethomepage.dev/widget.url: "https://opencode.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`opencode.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: opencode-docker-vscode-customized
      port: 4096
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: opencode-certificate-secret
